--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     <header>
         <div class="container">
-            <div class="logo"><a href="#"><img src="img/logo.png"></a></div>
+            <div class="logo"><a href="#"><img src="logo.png"></a></div>
             <nav class="menu">
                 <ul>
                     <li><a href="#">Overviews</a></li>
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <div class="b_img">
-                <img src="img/pic1.png" alt="Quick">
+                <img src="pic1.png" alt="Quick">
             </div>
         </div>
     </section>
@@ -72,7 +72,7 @@
             <div class="s_wrapper">
                 <div class="s_single">
                     <div class="s_img">
-                        <img src="img/box1.png" alt="quick">
+                        <img src="box1.png" alt="quick">
                     </div>
                     <div class="s_text">
                         <h2>Unleash you creativity 
@@ -82,7 +82,7 @@
                     </div>
                 </div> <div class="s_single red">
                     <div class="s_img">
-                        <img src="img/box2.png " alt="quick">
+                        <img src="box2.png " alt="quick">
                     </div>
                     <div class="s_text">
                         <h2>Unleash you creativity 
@@ -92,7 +92,7 @@
                     </div>
                 </div> <div class="s_single green">
                     <div class="s_img">
-                        <img src="img/box3.png " alt="quick">
+                        <img src="box3.png " alt="quick">
                     </div>
                     <div class="s_text">
                         <h2>Unleash you creativity 
